# Copyright 2013, Benjamin Chretien, LIRMM-CNRS
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
ENABLE_LANGUAGE(CXX)

INCLUDE(cmake/base.cmake)
INCLUDE(cmake/boost.cmake)
INCLUDE(cmake/eigen.cmake)

SET(PROJECT_NAME cpp-sandbox)
SET(PROJECT_DESCRIPTION "C++ Sandbox")
SET(PROJECT_URL "https://github.com/bchretien/cpp-sandbox")

SET(HEADERS "")

SEARCH_FOR_BOOST()
ADD_REQUIRED_DEPENDENCY("eigen3")

INCLUDE_DIRECTORIES(
  SYSTEM
  ${Boost_INCLUDE_DIR}
  ${Eigen3_INCLUDE_DIR}
)

SETUP_PROJECT()

# Set output
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib/${CMAKE_BUILD_TYPE})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin/${CMAKE_BUILD_TYPE})

ADD_SUBDIRECTORY(src)
